# main.go
@@ -87,6 +87,8 @@ func startGin() {
 		apiGroup.POST("/SetParameters", controller.SetParameters)
 		apiGroup.GET("/GetDensityCoefficientDetails", controller.GetDensityCoefficientDetails)
 		apiGroup.POST("/RecalculateDensityCoefficient", controller.RecalculateDensityCoefficient)
+		apiGroup.GET("/GetImbalanceDetails", controller.GetImbalanceDetails)
+		apiGroup.POST("/RecalculateImbalance", controller.RecalculateImbalance)
 		apiGroup.GET("/GetCalculationsList", controller.GetCalculationsList)
 	}
 
